# Liquid-Glass-Music-Player-APP

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: main.js  style.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: app-commands.toml  fs-permissions.toml
src-tauri/src/: lib.rs
